@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.191 2014/01/31 13:18:24 nanard Exp $
+$Id: Changelog.txt,v 1.193 2014/02/05 17:26:45 nanard Exp $
 miniUPnP client Changelog.
+
+2014/02/05:
+  handle EINPROGRESS after connect()
 
 2014/02/03:
   minixml now handle XML comments
